tests/multiubuntu/automation-tests/policies/TC_06_egress_for_toCIDRs_toPorts_multiple_ports.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-dafplsjfbcxoeff
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  egress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
    toCIDR:
    - 143.248.36.38/32
---
