tests/multiubuntu/automation-tests/policies/TC_10_egress_toEntities_remote_node.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-1
      group: group-1
  egress:
  - toEntities:
    - remote-node
---
