tests/multiubuntu/automation-tests/policies/TC_12_egress_toServices_multiple_pods.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      group: group-1
  egress:
  - toServices:
    - k8sService:
        serviceName: external-service
        namespace: multiubuntu
---
