tests/multiubuntu/automation-tests/policies/TC_28_ingress_after_db_status_check_selector_aggregation.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-whthctcuaxhxkqf
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      group: group-2
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-2
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
---
